--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -35,7 +35,7 @@ body {
 }
 
 .pageh1 {
-  transition:  1s ease-in-out; /* Define a transição: opacidade, 1 segundo, função de tempo */
+  transition:  1s ease-in-out; 
 }
 
 .img{
